fix color for collapse menu in lightmode

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -192,4 +192,8 @@ input {
   .rooms-inner-content{
     background-color: black !important;
   }
+
+  .burger-color{
+    background-color: #212529 !important;
+  }
 }
