--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -20,3 +20,7 @@
   height: 25px;
   width: 25px;
 }
+
+.burger-color{
+  background-color: #999999 !important;
+}
